js-chess/index.css
:root {
    --dark-bg: #964d22;
    --light-bg: #eedc97;
    --hl-bg: #ff4d22;
    --selected-bg: #ddc932;
    --light-coords: #eee;
    --dark-coords: #000;
}

body {
    margin: 0px;
    padding: 0px;
}

.chess-container {
    display: grid;
    grid-template-columns: 1fr 2fr 1fr;
    grid-template-rows: auto;
    padding-top: 50px;
    padding-bottom: 50px;
    width: 100%;
    aspect-ratio: 2 / 1;
}

.chess-notation-container {
    display: grid;
    grid-template-rows: 1fr auto;
    grid-auto-flow: rows;
    overflow: hidden;
    padding: 10px;
    row-gap: 10px;
}

.chess-notation {
    display: grid;
    grid-template-columns: 1fr 2fr 2fr;
    grid-auto-rows: min-content;
    row-gap: 10px;
    width: 100%;
    max-width: 300px;
    height: 100%;
    overflow: scroll;
}

.chess-notation p {
    margin: 0;
    height: 1lh;
}

.chess-buttons {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-flow: rows;
    column-gap: 10px;
    row-gap: 10px;
}

.chess-board {
    width: 100%;
    height: 100%;
    margin: 0px auto;
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: repeat(8, 1fr); 
    position: relative;
}

.chess-rank {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(8, 1fr);
    grid-template-rows: auto;
}

.chess-square{
    text-align: center;
    border-style: solid;
    border-width: 0px;
    border-color: black;
    width: 100%;
    aspect-ratio: 1 / 1;
    overflow: hidden;
    padding: auto auto;
    position: relative;
}

.chess-square.dark{
    background-color: var(--dark-bg);
    color: var(--dark-coords);
}

.chess-square.light{
    background-color: var(--light-bg);
    color: var(--light-coords);
}

.chess-square.hl {
    background-color: var(--hl-bg);
}

.chess-square.selected {
    background-color: var(--selected-bg);
}

.chess-square .piece-icon {
    height: 100%;
    width: 100%;
    margin: auto auto;
    user-drag: none;
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.hint-dot {
    height: 25%;
    padding: auto;
    aspect-ratio: 1 / 1;
    margin: auto auto;
    background-color: #bbb;
    opacity: 50%;
    border-radius: 50%;
    display: block;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.pawn-promotion-container {
    display: grid;
    padding: 10px 20px;
    grid-template-rows: 1fr 3fr 3fr;
    grid-template-columns: repeat(2, 1fr);
    grid-auto-flow: row;
    height: 45%;
    width: 45%;
    border-radius: 5%;
    background-color: #ddd;
    opacity: 75%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    visibility: hidden;
}

.pawn-promotion-text {
    font-size: 24pt;
    grid-column: 1 / span 2;
    display: flex;
    align-items: center;
    justify-content: center;
}

.pawn-promotion-icon {
    height: 100%;
    max-height: 100%;
    max-width: 100%;
    margin: auto;
    aspect-ratio: 1 / 1;
    display: block;
    border-radius: 5%;
}

.pawn-promotion-icon:hover {
    background-color: #bbb;
}

